# expert-contributor-ai

./: .cursorrules  .env  .gitignore  revisions.md  task_reviewer.md  test_agents.py
.feedback_queue/: FEEDBACK.md
harbor_tasks/configure-cli-emulators-profiles/: instruction.md
harbor_tasks/migrate-flask-auth-sha1-to-argon2id/: migrate-flask-auth-sha1-to-argon2id.DONE.md  migrate-flask-auth-sha1-to-argon2id.QC.md  task.toml
harbor_tasks/pylint-async-io-checker/: TEST_PROOF.md  instruction.md  pylint-async-io-checker.DONE.md  pylint-async-io-checker.QC.md  pylint-async-io-checker.STATE.md  task.toml
harbor_tasks/pylint-async-io-checker/app/: async_io_checker.py  pyproject.toml
harbor_tasks/pylint-async-io-checker/app/tests/: test_async_io_checker.py
harbor_tasks/pylint-async-io-checker/app/tests/fixtures/: async_coroutine.py
harbor_tasks/windows-artifact-timeline/: NOTES.md
harbor_test_tasks/cli-emulator/: instruction.md
harbor_test_tasks/cli-emulator-revised/: instruction.md
harbor_test_tasks/extract-png-flags-lsb/: NOTES.md  instruction.md
harbor_test_tasks/pgp-recovery/: instruction.md  task.toml
snorkel-ai/: Creating-Docker-Environment.md  Writing-Instructions&Config.md  agent-task-control.md  env.txt  migrate-flask-auth-sha1-to-argon2id.STATE.md  mysql-lvm-backup-pipeline.STATE.md  pylint-async-io-checker.DONE.md  pylint-async-io-checker.QC.md  pylint-async-io-checker.STATE.md  real.env  writing-oracle-solution.md  writing-tests.md
snorkel-ai/configure-bazel-remote-cache/: NOTES.md  configure-bazel-remote-cache.DONE.md  configure-bazel-remote-cache.QC.md  configure-bazel-remote-cache.STATE.md  instruction.md  task.toml
snorkel-ai/configure-cli-emulators-profiles/: NOTES.md  instruction.md  task.toml
snorkel-ai/configure-openssh-bastion-cert-proxyjump/: NOTES.md  instruction.md  task.toml
snorkel-ai/configure-openssh-ca-only-proxyjump/: NOTES.md  REVIEWER_NOTES.md  instruction.md  task.toml
snorkel-ai/create-github-actions-ci-workflow/: NOTES.md  create-github-actions-ci-workflow.DONE.md  create-github-actions-ci-workflow.QC.md  create-github-actions-ci-workflow.STATE.md  instruction.md  task.toml
snorkel-ai/dep-bumper-cli/: .snorkel_config  NOTES.md  dep-bumper-cli.STATE.md  instruction.md  task.toml
snorkel-ai/dev/: README.md  check_docker.sh  setup_harbor.sh
snorkel-ai/extract-png-flags-lsb/: .snorkel_config  NOTES.md  instruction.md  task.toml
snorkel-ai/fix-cmake-fpic-openmp-clang/: NOTES.md  fix-cmake-fpic-openmp-clang.DONE.md  fix-cmake-fpic-openmp-clang.QC.md  fix-cmake-fpic-openmp-clang.STATE.md  instruction.md  task.toml
snorkel-ai/fix-cmake-fpic-openmp-clang/app/: CMakeLists.txt  README.md
snorkel-ai/fix-cmake-fpic-openmp-clang/app/src/: main.cpp  math_utils.cpp  math_utils.h
snorkel-ai/harbor_tasks/fix-rust-tls-dependency-conflict/app/: Cargo.toml
snorkel-ai/pylint-async-io-checker/app/: async_io_checker.py  pyproject.toml
snorkel-ai/pylint-async-io-checker/app/tests/: test_async_io_checker.py
snorkel-ai/pylint-async-io-checker/app/tests/fixtures/: async_coroutine.py  async_with_blocking.py
(+201 files in other folders)
